--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -15,8 +15,12 @@
   background-color: grey;
 }
 
+.input::placeholder {
+  color: #eee;
+}
 
 .button {
+  margin-right: 10px;
   padding: 6px 12px;
   font-size: 0.9rem;
   border: none;
