--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,8 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.welcome {
+    padding: 120px 20px 20px 20px;
+    font-size: 1.5rem;
+
+  }
